fix bug et optimisation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Demineur</title>
 </head>
 
-<body class="h-full w-full">
+<body class="h-screen w-screen">
   <div id="root" class="h-full w-full"></div>
 </body>
 
